# augur

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
personas/contrarian/: burry.yaml  dreman.yaml  templeton.yaml
personas/growth/: fisher.yaml  lynch.yaml  sleep.yaml  wood.yaml
personas/macro/: dalio.yaml  druckenmiller.yaml  soros.yaml
personas/quant/: asness.yaml  simons.yaml
personas/value/: buffett.yaml  graham.yaml  grantham.yaml  klarman.yaml  marks.yaml  munger.yaml
src/augur/: __init__.py  __main__.py  aggregator.py  analyst.py  cli.py  client.py  json_utils.py  orchestrator.py  personas.py  pipeline.py  report.py  research_agent.py  schemas.py  search.py  snapshot.py  ui.py
